Some tweaks related to the display of friendly people * Profile blurb from agesex down was too big, created new css LesserInfo for it * Removed the "or..." from myfriends, clarified text, fixed layout * Capitalize whirled, always

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -90,6 +90,12 @@
   margin-bottom: 15px;
 }
 
+.meFriendsPanel .GreeterTitleSub {
+  color: #326383;
+  font-size: 11px;
+  padding: 15px 0 1px 0;
+}
+
 .meFriendsPanel .Invite img {
   margin: 10px auto;
 }
